--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,6 +1,13 @@
+body {
+	background-color: pink;
+
+}
+h1 {
+	color: magenta;
+}
 .bubble {
 	position: absolute;
-	border: 3px solid pink;
+	border: 3px solid purple;
 	border-radius: 50%;
 	width: 2em;
 	height: 2em;
